[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/newgrounds/NewGroundsAPI.gd" type="Script" id=1]
[ext_resource path="res://addons/newgrounds/ng16.png" type="Texture" id=2]
[ext_resource path="res://resources/PanelStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://resources/TitleStyle.tres" type="StyleBox" id=4]
[ext_resource path="res://resources/TitleFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://resources/LabelFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://NGPluginSample.gd" type="Script" id=7]

[node name="NGPluginSample" type="Node"]
script = ExtResource( 7 )

[node name="NewGroundsAPI" type="HTTPRequest" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_editor_icon": ExtResource( 2 )
}
verbose = true
debug = true

[node name="UI" type="Container" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Gateway" type="PanelContainer" parent="UI"]
margin_left = 10.0
margin_top = 330.0
margin_right = 320.0
margin_bottom = 510.0
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Container" type="VBoxContainer" parent="UI/Gateway"]
margin_left = 10.0
margin_top = 10.0
margin_right = 300.0
margin_bottom = 170.0

[node name="Title" type="Label" parent="UI/Gateway/Container"]
margin_right = 290.0
margin_bottom = 45.0
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Gateway"
align = 1

[node name="Version" type="HBoxContainer" parent="UI/Gateway/Container"]
margin_top = 49.0
margin_right = 290.0
margin_bottom = 82.0

[node name="Button" type="Button" parent="UI/Gateway/Container/Version"]
margin_right = 100.0
margin_bottom = 33.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 6 )
text = "Version"

[node name="Result" type="Label" parent="UI/Gateway/Container/Version"]
margin_left = 104.0
margin_top = 9.0
margin_right = 290.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="Datetime" type="HBoxContainer" parent="UI/Gateway/Container"]
margin_top = 86.0
margin_right = 290.0
margin_bottom = 119.0

[node name="Button" type="Button" parent="UI/Gateway/Container/Datetime"]
margin_right = 100.0
margin_bottom = 33.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 6 )
text = "Datetime"

[node name="Result" type="Label" parent="UI/Gateway/Container/Datetime"]
margin_left = 104.0
margin_top = 9.0
margin_right = 290.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="Ping" type="HBoxContainer" parent="UI/Gateway/Container"]
margin_top = 123.0
margin_right = 290.0
margin_bottom = 156.0

[node name="Button" type="Button" parent="UI/Gateway/Container/Ping"]
margin_right = 100.0
margin_bottom = 33.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 6 )
text = "Ping"

[node name="Result" type="Label" parent="UI/Gateway/Container/Ping"]
margin_left = 104.0
margin_top = 9.0
margin_right = 290.0
margin_bottom = 23.0
size_flags_horizontal = 3

[node name="Status" type="PanelContainer" parent="UI"]
margin_left = 10.0
margin_top = 543.0
margin_right = 1020.0
margin_bottom = 590.0
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="UI/Status"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1000.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 6 )

[node name="Settings" type="PanelContainer" parent="UI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 320.0
margin_bottom = 110.0
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Container" type="VBoxContainer" parent="UI/Settings"]
margin_left = 10.0
margin_top = 10.0
margin_right = 300.0
margin_bottom = 90.0

[node name="Label" type="Label" parent="UI/Settings/Container"]
margin_right = 290.0
margin_bottom = 45.0
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Settings"
align = 1

[node name="ApplicationId" type="HBoxContainer" parent="UI/Settings/Container"]
margin_top = 49.0
margin_right = 290.0
margin_bottom = 76.0

[node name="Label" type="Label" parent="UI/Settings/Container/ApplicationId"]
margin_right = 120.0
margin_bottom = 27.0
rect_min_size = Vector2( 120, 0 )
custom_fonts/font = ExtResource( 6 )
text = "ApplicationId"

[node name="Value" type="LineEdit" parent="UI/Settings/Container/ApplicationId"]
margin_left = 124.0
margin_right = 290.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="Medal" type="PanelContainer" parent="UI"]
margin_left = 720.0
margin_top = 10.0
margin_right = 1020.0
margin_bottom = 270.0
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Container" type="VBoxContainer" parent="UI/Medal"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 250.0

[node name="Label" type="Label" parent="UI/Medal/Container"]
margin_right = 280.0
margin_bottom = 45.0
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Medals"
align = 1

[node name="List" type="ScrollContainer" parent="UI/Medal/Container"]
margin_top = 49.0
margin_right = 280.0
margin_bottom = 199.0
rect_min_size = Vector2( 0, 150 )

[node name="Container" type="VBoxContainer" parent="UI/Medal/Container/List"]

[node name="Button" type="Button" parent="UI/Medal/Container"]
margin_top = 203.0
margin_right = 280.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 6 )
text = "Get List"

[node name="Application" type="PanelContainer" parent="UI"]
margin_left = 10.0
margin_top = 120.0
margin_right = 320.0
margin_bottom = 321.0
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Container" type="VBoxContainer" parent="UI/Application"]
margin_left = 10.0
margin_top = 10.0
margin_right = 300.0
margin_bottom = 191.0

[node name="Title" type="Label" parent="UI/Application/Container"]
margin_right = 290.0
margin_bottom = 45.0
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Application"

[node name="Session" type="Label" parent="UI/Application/Container"]
margin_top = 49.0
margin_right = 290.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 6 )
text = "Session: None"
clip_text = true

[node name="User" type="Label" parent="UI/Application/Container"]
margin_top = 80.0
margin_right = 290.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 6 )
text = "User:"

[node name="Login" type="Button" parent="UI/Application/Container"]
margin_top = 111.0
margin_right = 290.0
margin_bottom = 144.0
custom_fonts/font = ExtResource( 6 )
disabled = true
text = "Login"

[node name="SessionAction" type="HBoxContainer" parent="UI/Application/Container"]
margin_top = 148.0
margin_right = 290.0
margin_bottom = 181.0

[node name="Start" type="Button" parent="UI/Application/Container/SessionAction"]
margin_right = 94.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "Start"

[node name="Check" type="Button" parent="UI/Application/Container/SessionAction"]
margin_left = 98.0
margin_right = 192.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "Check"

[node name="End" type="Button" parent="UI/Application/Container/SessionAction"]
margin_left = 196.0
margin_right = 290.0
margin_bottom = 33.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "End"

[node name="Scores" type="PanelContainer" parent="UI"]
margin_left = 330.0
margin_top = 10.0
margin_right = 710.0
margin_bottom = 475.0
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Container" type="VBoxContainer" parent="UI/Scores"]
margin_left = 10.0
margin_top = 10.0
margin_right = 370.0
margin_bottom = 455.0

[node name="Title" type="Label" parent="UI/Scores/Container"]
margin_right = 360.0
margin_bottom = 45.0
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
text = "Scores"
align = 1

[node name="Boards" type="ScrollContainer" parent="UI/Scores/Container"]
margin_top = 49.0
margin_right = 360.0
margin_bottom = 149.0
rect_min_size = Vector2( 0, 100 )

[node name="ItemList" type="ItemList" parent="UI/Scores/Container/Boards"]
margin_right = 360.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GetBoards" type="Button" parent="UI/Scores/Container"]
margin_top = 153.0
margin_right = 360.0
margin_bottom = 186.0
custom_fonts/font = ExtResource( 6 )
text = "Get Boards"

[node name="Scores" type="ScrollContainer" parent="UI/Scores/Container"]
margin_top = 190.0
margin_right = 360.0
margin_bottom = 340.0
rect_min_size = Vector2( 0, 150 )

[node name="ItemList" type="ItemList" parent="UI/Scores/Container/Scores"]
margin_right = 360.0
margin_bottom = 150.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GetScores" type="Button" parent="UI/Scores/Container"]
margin_top = 344.0
margin_right = 360.0
margin_bottom = 377.0
custom_fonts/font = ExtResource( 6 )
text = "Get Scores"

[node name="Score" type="HBoxContainer" parent="UI/Scores/Container"]
margin_top = 381.0
margin_right = 360.0
margin_bottom = 408.0

[node name="Label" type="Label" parent="UI/Scores/Container/Score"]
margin_right = 80.0
margin_bottom = 27.0
rect_min_size = Vector2( 80, 0 )
custom_fonts/font = ExtResource( 6 )
text = "Score"

[node name="Value" type="LineEdit" parent="UI/Scores/Container/Score"]
margin_left = 84.0
margin_right = 360.0
margin_bottom = 27.0
size_flags_horizontal = 3

[node name="AddScore" type="Button" parent="UI/Scores/Container"]
margin_top = 412.0
margin_right = 360.0
margin_bottom = 445.0
custom_fonts/font = ExtResource( 6 )
text = "Add Score"
